--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="utf-8">
     <title>My absolutely peak website</title>
+     <style>
+        body {
+            background-color: #121212;
+            color: ##ededed;
+        }
+    </style>
   </head>
   <body>
-    <header>Hello</header>
-    <main>from github pages!</main>
-    <footer>This is a work in progress.</footer>
+    <h1>Hello from GitHub Pages!</h1>
+    <p>This site is a work on progress so stay tuned!</p>
   </body>
 </html>
