--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+  body {
+    font-family: sans-serif;
+    padding: 1rem;
+    margin: 0;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.6;
+    background: #f9f9f9;
+    color: #222;
+  }
+
+  h1, h2, h3 {
+    line-height: 1.2;
+    word-break: break-word;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+</style>
     <meta charset="utf-8">
-    <title>My absolutely peak website</title>
+    <title>Argus128's GitHub Page</title>
      <style>
         body {
             background-color: #121212;
-            color: ##ededed;
+            color: #ededed;
         }
     </style>
   </head>
   <body>
-    <h1>Hello from GitHub Pages!</h1>
-    <p>This site is a work on progress so stay tuned!</p>
+    <h1>Welcome to my site!</h1>
+    <p>I'm Argus128. A nobody with a dream.</p>
+     <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
+     <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
+     <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
   </body>
 </html>
