Updates to index, again.

--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
      <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
      <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
+     <h3>Things my stupid ass needs to remember about git:</h3>
+     <p><code>git commit origin main</code> to <strong>PULL</strong> the repo first before pushing to it (if in case i do something stupid like editing index using the github web app)</p>
+     <p><code>git add .</code> to add everything and prepare to commit and push.</p>
+     <p><code>git push origin main</code> to finally push out my crap and let github do its thing.</p>
   </body>
 </html>
