--- a/index.html
+++ b/index.html
@@ -2,36 +2,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-  body {
-    font-family: sans-serif;
-    padding: 1rem;
-    margin: 0;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 1.6;
-    background: #f9f9f9;
-    color: #222;
-  }
-
-  h1, h2, h3 {
-    line-height: 1.2;
-    word-break: break-word;
-  }
-
-  p {
-    font-size: 1rem;
-  }
-</style>
     <meta charset="utf-8">
     <title>Argus128's GitHub Page</title>
-     <style>
-        body {
-            background-color: #121212;
-            color: #ededed;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Welcome to my site!</h1>
