--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Welcome to my site!</h1>
-    <p>I'm Argus128. A nobody with a dream.</p>
+    <p>I'm Argus128. A student who is interested in technology, aviation, and video games. This site is no more than a hobby project but I hope you'll like it!</p>
      <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
      <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
