--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
        <button onclick="toggleMute()">Mute / Unmute</button>
     <audio id="bgm" loop>
       <source src="music.opus" type="audio/ogg; codecs=opus">
+      <source src="music.mp3" type="audio/mpeg">
       Your browser does not support the audio tag.
     </audio>
     <script>
