--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
      <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
      <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
+     <a href="https://www.youtube.com/@Argus256" target="_blank">YouTube Profile</a>
+     <br><br  >
+     <a href="https://discord.gg/mfY8radHee" target="_blank">Younc's Discord Server 👀</a>
+     <br><br><br>
      <h3>Things my stupid ass needs to remember about git:</h3>
      <p><code>git pull origin main</code> to <strong>PULL</strong> the repo first before pushing to it (if in case i do something stupid like editing index using the github web app)</p>
      <p><code>git add .</code> to add everything and prepare to commit and push.</p>
@@ -21,7 +25,6 @@
     <audio id="bgm" loop>
       <source src="music.opus" type="audio/ogg; codecs=opus">
       <source src="music.mp3" type="audio/mpeg">
-      Your browser does not support the audio tag.
     </audio>
     <script>
       const music = document.getElementById("bgm");
