some mobile fixes done, hopefully.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
      <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
      <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
      <a href="https://www.youtube.com/@Argus256" target="_blank">YouTube Profile</a>
-     <br><br  >
      <a href="https://discord.gg/mfY8radHee" target="_blank">Younc's Discord Server 👀</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
+     <button onclick="toggleMute()">Toggle Music</button>
      <br><br><br>
      <h3>Things my stupid ass needs to remember about git:</h3>
      <p><code>git pull origin main</code> to <strong>PULL</strong> the repo first before pushing to it (if in case i do something stupid like editing index using the github web app)</p>
      <p><code>git add .</code> to add everything and prepare to commit and push.</p>
      <p><code>git push origin main</code> to finally push out my crap and let github do its thing.</p>
      <!--Music code below-->
-       <button onclick="toggleMute()">Mute / Unmute</button>
     <audio id="bgm" loop>
       <source src="music.opus" type="audio/ogg; codecs=opus">
       <source src="music.mp3" type="audio/mpeg">
