added a flash game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Welcome to my site!</h1>
     <p>I'm Argus128. A student who is interested in technology, aviation, and video games. This site is no more than a hobby project but I hope you'll like it!</p>
+    <a href="pizzeria.html" class="flash-link">Play Papa's Pizzeria</a>
      <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
      <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
      <a href="https://www.youtube.com/@Argus256" target="_blank">YouTube Profile</a>
