Added a ton if new flash games, and restructured the repo a bit.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
   <body>
     <h1>Welcome to my site!</h1>
     <p>I'm Argus128. A student who is interested in technology, aviation, and video games. This site is no more than a hobby project but I hope you'll like it!</p>
-     <a href="pizzeria.html" class="flash-link">Play Papa's Pizzeria</a>
-     <a href="interactivebuddy.html" class="flash-link">Play Interactive Buddy</a>
      <a href="https://osu.ppy.sh/users/33303463" target="_blank">osu! Profile</a>
      <a href="https://tiktok.com/@_argus128" target="_blank">TikTok Profile</a>
      <a href="https://www.youtube.com/@Argus256" target="_blank">YouTube Profile</a>
      <a href="https://discord.gg/mfY8radHee" target="_blank">Younc's Discord Server 👀</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
      <button onclick="toggleMute()">Toggle Music</button>
-     <br><br><br>
-     <h3>Things my stupid ass needs to remember about git:</h3>
-     <p><code>git pull origin main</code> to <strong>PULL</strong> the repo first before pushing to it (if in case i do something stupid like editing index using the github web app)</p>
-     <p><code>git add .</code> to add everything and prepare to commit and push.</p>
-     <p><code>git push origin main</code> to finally push out my crap and let github do its thing.</p>
+     <br><br>
+     <h1>Play Adobe Flash Games Below!</h1>
+     <a href="game_pages/pizzeria.html" class="flash-link">Play Papa's Pizzeria</a>
+     <a href="game_pages/interactivebuddy.html" class="flash-link">Play Interactive Buddy</a>
+     <a href="game_pages/whack.html" class="flash-link">Play Whack Your Boss</a>
+     <a href="game_pages/hardestgame.html" class="flash-link">Play The World's Hardest Game</a>
+     <a href="game_pages/hexxagon.html" class="flash-link">Play Hexxagon</a>
+     <a href="game_pages/impossiblequiz.html" class="flash-link">Play The Impossible Quiz</a>
+     <a href="game_pages/mad2.html" class="flash-link">Play Mutilate a Doll 2</a>
+     <a href="game_pages/mctowerdef2.html" class="flash-link">Play Minecraft Tower Defense 2</a>
+     <a href="game_pages/pacman.html" class="flash-link">Play Pac-Man</a>
+     <a href="game_pages/pcbreakdown.html" class="flash-link">Play Metele Al Ordenata (PC Breakdown)</a>
+     <a href="game_pages/pong.html" class="flash-link">Play Pong</a>
      <!--Music code below-->
     <audio id="bgm" loop>
       <source src="music.opus" type="audio/ogg; codecs=opus">
