--- a/game_pages/hexxagon.html
+++ b/game_pages/hexxagon.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/style.css">
     <meta charset="utf-8">
-    <title>Flash Game</title>
+    <title>Hexxagon</title>
     <script src="../ruffle/ruffle.js"></script>
 </head>
 <body>
