--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-      <link rel="stylesheet" href="404-assets/404.css">
+      <link rel="stylesheet" href="assets/404.css">
     <meta charset="utf-8">
     <title>404 Not Found!</title>
   </head>
