--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Argus128's GitHub Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
     <h1>Welcome to my site!</h1>
@@ -30,8 +30,8 @@
      <a href="game_pages/pong.html" class="flash-link">Play Pong</a>
      <!--Music code below-->
     <audio id="bgm" loop>
-      <source src="music.opus" type="audio/ogg; codecs=opus">
-      <source src="music.mp3" type="audio/mpeg">
+      <source src="assets/music.opus" type="audio/ogg; codecs=opus">
+      <source src="assets/music.mp3" type="audio/mpeg">
     </audio>
     <script>
       const music = document.getElementById("bgm");
