--- a/game_pages/hardestgame.html
+++ b/game_pages/hardestgame.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/hardestgame.jpg">
-    <link rel="apple-touch-icon" sizes="256x256" href="../assets/icons/hardestgame.jpg">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/hardestgame.jpg">
     <meta charset="utf-8">
     <title>The World's Hardest Game</title>
     <script src="../ruffle/ruffle.js"></script>
