--- a/game_pages/hardestgame.html
+++ b/game_pages/hardestgame.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/hardestgame.json">
     <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/hardestgame.jpg">
     <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/hardestgame.jpg">
     <meta charset="utf-8">
