icons added for all games, hopefully it'll work.

--- a/game_pages/impossiblequiz.html
+++ b/game_pages/impossiblequiz.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/impossiblequiz.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/impossible.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/impossible.jpg">
     <meta charset="utf-8">
     <title>The Impossible Quiz</title>
     <script src="../ruffle/ruffle.js"></script>
