--- a/game_pages/mctowerdef2.html
+++ b/game_pages/mctowerdef2.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/mctowerdef2.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/mctowerdef2.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/mctowerdef2.jpg">
     <meta charset="utf-8">
     <title>Minecraft Tower Defense 2</title>
     <script src="../ruffle/ruffle.js"></script>
