--- a/game_pages/hexxagon.html
+++ b/game_pages/hexxagon.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/hexxagon.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/hexxagon.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/hexxagon.jpg">
     <meta charset="utf-8">
     <title>Hexxagon</title>
     <script src="../ruffle/ruffle.js"></script>
