--- a/game_pages/interactivebuddy.html
+++ b/game_pages/interactivebuddy.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/interactivebuddy.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/buddy.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/buddy.jpg">
     <meta charset="utf-8">
     <title>Interactive Buddy</title>
     <script src="../ruffle/ruffle.js"></script>
