--- a/game_pages/mad2.html
+++ b/game_pages/mad2.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/mad2.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/mad2.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/mad2.jpg">
     <meta charset="utf-8">
     <title>Mutilate a Doll 2</title>
     <script src="../ruffle/ruffle.js"></script>
