--- a/game_pages/pcbreakdown.html
+++ b/game_pages/pcbreakdown.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/pcbreakdown.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/metele.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/metele.jpg">
     <meta charset="utf-8">
     <title>Metele Al Ordenata (PC Breakdown)</title>
     <script src="../ruffle/ruffle.js"></script>
