--- a/game_pages/pong.html
+++ b/game_pages/pong.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="manifest" href="../assets/manifest/pong.json">
+    <link rel="apple-touch-icon" type="image/jpeg" sizes="256x256" href="../assets/icons/pong.jpg">
+    <link rel="icon" type="image/jpeg" sizes="256x256" href="../assets/icons/pong.jpg">
     <meta charset="utf-8">
     <title>Pong</title>
     <script src="../ruffle/ruffle.js"></script>
