removed useless readme and modified css, html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      <a href="https://www.youtube.com/@Argus256" target="_blank">YouTube Profile</a>
      <a href="https://discord.gg/mfY8radHee" target="_blank">Younc's Discord Server 👀</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
-     <button onclick="toggleMute()">Toggle Music</button>
-     <br><br>
+     <button onclick="toggleMute()">Mute/Unmute Music</button>
+     <br>
      <h1>Play Adobe Flash Games Below!</h1>
      <a href="game_pages/pizzeria.html" class="flash-link">Play Papa's Pizzeria</a>
      <a href="game_pages/interactivebuddy.html" class="flash-link">Play Interactive Buddy</a>
