accidentally committed on a folder, whoops

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
      <a href="https://www.youtube.com/@Argus256" target="_blank">YouTube Profile</a>
      <a href="https://discord.gg/mfY8radHee" target="_blank">Younc's Discord Server 👀</a>
      <a href="https://github.com/Argus-128" target="_blank">GitHub Profile</a>
+     <a href="https://forms.gle/UCxX7zoE4u2DX3QQ6" target="_blank">Sign this site's guestbook!</a>
+     <a href="assets/guestbookview.html">View this site's guestbook!</a>
      <button onclick="toggleMute()">Mute/Unmute Music</button>
      <br>
      <h1>Play Adobe Flash Games Below!</h1>
