--- a/assets/guestbookview.html
+++ b/assets/guestbookview.html
@@ -7,6 +7,23 @@
   </head>
   <body>
   <a href="../index.html">Go back to the main page</a>
+  <button onclick="toggleMute()">Mute/Unmute Music</button>
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMlY2NPH5pXqSVAtkCy2FN1z-hZAxamazYGl76QEBivjtyj0eZIaoEKbrMWkpDpT5Adkf5k-HpM9GQ/pubhtml" width="100%" height="640"></iframe>
+<audio id="bgm" loop>
+      <source src="music.opus" type="audio/ogg; codecs=opus">
+      <source src="music.mp3" type="audio/mpeg">
+    </audio>
+    <script>
+      const music = document.getElementById("bgm");
+      document.addEventListener("click", () => {
+        if (music.paused) {
+          music.play();
+        }
+      }, { once: true });
+
+      function toggleMute() {
+        music.muted = !music.muted;
+      }
+    </script>
   </body>
 </html>
